force-app/main/default/objects/Account/fields/sirenum__Payroll_Eligible__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Payroll_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For WFM users interfacing with Cyborg, defines whether employees belonging to this account will be exported for payroll.</inlineHelpText>
    <label>Payroll Eligible</label>
    <type>Checkbox</type>
</CustomField>