force-app/main/default/objects/Account/fields/sirenum__Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card</label>
    <referenceTo>sirenum__Rate_Card__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>