force-app/main/default/objects/Account/fields/sirenum__VATable__c.field-meta.xml
<CustomField>
    <fullName>sirenum__VATable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for Umbrella companies, denote if VAT must be added</description>
    <inlineHelpText>for Umbrella companies, denote if VAT must be added</inlineHelpText>
    <label>VATable</label>
    <type>Checkbox</type>
</CustomField>