force-app/main/default/objects/Account/fields/Special_Classes__c.field-meta.xml
<CustomField>
    <fullName>Special_Classes__c</fullName>
    <label>Special Classes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>