force-app/main/default/objects/Account/fields/Teaching_Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Age_Group__c</fullName>
    <label>Teaching Age Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0–3 (Nursery / Early Childhood)</fullName>
            </value>
            <value>
                <fullName>3–4 (Preschool / Nursery Upper)</fullName>
            </value>
            <value>
                <fullName>4–8 (KS1 Primary age)</fullName>
            </value>
            <value>
                <fullName>8–11 (KS2 Primary age)</fullName>
            </value>
            <value>
                <fullName>11–14 (KS3 Secondary age)</fullName>
            </value>
            <value>
                <fullName>14–16 (KS4 Secondary age)</fullName>
            </value>
            <value>
                <fullName>16–18 (FE)</fullName>
            </value>
            <value>
                <fullName>18–25 (Young Adult/HE)</fullName>
            </value>
            <value>
                <fullName>25–64 (Adult)</fullName>
            </value>
            <value>
                <fullName>65+ (Elderly)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>