force-app/main/default/objects/Account/fields/Teaching_Department__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Department__c</fullName>
    <inlineHelpText>Please select which Department within the Council</inlineHelpText>
    <label>Teaching Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclusion Team (any child who isnt CLA and does not have an EHCP) within LA</fullName>
            </value>
            <value>
                <fullName>Leaving Care Department within LA</fullName>
            </value>
            <value>
                <fullName>Section 19 Team Department within LA</fullName>
            </value>
            <value>
                <fullName>SEND Team (any Child with an EHCP) within LA</fullName>
            </value>
            <value>
                <fullName>Social Care Department within LA</fullName>
            </value>
            <value>
                <fullName>Virtual School within LA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>