force-app/main/default/objects/Account/fields/Teaching_Type__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Type__c</fullName>
    <label>Teaching Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Council</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>Parent Academy</fullName>
            </value>
            <value>
                <fullName>Private Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>