force-app/main/default/objects/Account/fields/Temporary_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Payment_Terms__c</fullName>
    <label>Temporary Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment is due upon receipt</fullName>
            </value>
            <value>
                <fullName>7 Days Standard Terms</fullName>
            </value>
            <value>
                <fullName>14 Days Standard Terms</fullName>
            </value>
            <value>
                <fullName>30 Days Standard Terms</fullName>
            </value>
            <value>
                <fullName>45 Days Standard Terms</fullName>
            </value>
            <value>
                <fullName>60 Days Standard Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>