force-app/main/default/objects/Account/fields/TR1__Agreed_D2D_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>TR1__Agreed_D2D_Charge_Rate__c</fullName>
    <label>Standard Day Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>