force-app/main/default/objects/Account/fields/TR1__External_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>TR1__External_Job_ID__c</fullName>
    <description>Job Id to be populated here for dummy Accounts used for location.</description>
    <externalId>true</externalId>
    <label>External Job ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>