force-app/main/default/objects/Account/fields/TR1__Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>TR1__Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>