force-app/main/default/objects/Account/fields/TR1__isDummy__c.field-meta.xml
<CustomField>
    <fullName>TR1__isDummy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used by the scheduler to indicate the dummy account created to fetch the latitude and longitude if this is checked consider it would be deleted.</description>
    <label>isDummy</label>
    <type>Checkbox</type>
</CustomField>