force-app/main/default/objects/Account/fields/TR1__IsMemberOfDefaultAccountPool__c.field-meta.xml
<CustomField>
    <fullName>TR1__IsMemberOfDefaultAccountPool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMemberOfDefaultAccountPool</label>
    <type>Checkbox</type>
</CustomField>