force-app/main/default/objects/Account/fields/TR1__LEA__c.field-meta.xml
<CustomField>
    <fullName>TR1__LEA__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>Yorkshire &amp; Humberside</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>Eastern England</fullName>
            </value>
            <value>
                <fullName>Greater London</fullName>
            </value>
            <value>
                <fullName>South East England</fullName>
            </value>
            <value>
                <fullName>South West England</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>