force-app/main/default/objects/Account/fields/TR1__Off_Limit__c.field-meta.xml
<CustomField>
    <fullName>TR1__Off_Limit__c</fullName>
    <formula>IF(AND(TR1__Off_Limit_Info__r.TR1__Active__c, $Setup.TR1__Executive_Search__c.TR1__Enable_Off_Limit_Policies__c),IMAGE(IF(NOT(ISBLANK(TR1__Off_Limit_Info__r.TR1__Off_Limit_Policy__r.TR1__Override_Icon__c)),TR1__Off_Limit_Info__r.TR1__Off_Limit_Policy__r.TR1__Override_Icon__c,IF(ISPICKVAL(TR1__Off_Limit_Info__r.TR1__Behavior__c,&quot;Block&quot;),IF(NOT(ISBLANK($Setup.TR1__Executive_Search__c.TR1__Default_Off_Limit_Icon__c)),$Setup.TR1__Executive_Search__c.TR1__Default_Off_Limit_Icon__c,&apos;/resource/TR1__Lock_icon_svg&apos;),IF(NOT(ISBLANK($Setup.TR1__Executive_Search__c.TR1__Default_Off_Limit_Warning_Icon__c)),$Setup.TR1__Executive_Search__c.TR1__Default_Off_Limit_Warning_Icon__c, &apos;/resource/TR1__Warning_icon_svg&apos;))),&apos;Lock&apos;,30, 30),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Off Limit</label>
    <type>Text</type>
</CustomField>