force-app/main/default/objects/Account/fields/TR1__Off_Limit_Info__c.field-meta.xml
<CustomField>
    <fullName>TR1__Off_Limit_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Off Limit Info</label>
    <referenceTo>TR1__Off_Limit_Info__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>