force-app/main/default/objects/Account/fields/TR1__Status__c.field-meta.xml
<CustomField>
    <fullName>TR1__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
                <default>true</default>
                <label>Prospecting</label>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Conditions</fullName>
                <label>Terms &amp; Conditions Agreed</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>