force-app/main/default/objects/Account/fields/TR1__Update_Related_Jobs__c.field-meta.xml
<CustomField>
    <fullName>TR1__Update_Related_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is used in workflow and trigger to make sure the geo location billing latitude and longitude on Account are updated to all its related Jobs Account Billing Latitude and Longitude</description>
    <label>Update Related Jobs?</label>
    <type>Checkbox</type>
</CustomField>