force-app/main/default/objects/Account/fields/Trust_School_Flag__c.field-meta.xml
<CustomField>
    <fullName>Trust_School_Flag__c</fullName>
    <label>Trust School Flag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>