force-app/main/default/objects/Account/fields/Type_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Establishment__c</fullName>
    <label>Type of Establishment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>