force-app/main/default/objects/Account/fields/Type_of_Resourced_Provision__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Resourced_Provision__c</fullName>
    <label>Type of Resourced Provision</label>
    <length>80</length>
    <type>Text</type>
</CustomField>