force-app/main/default/objects/Account/fields/URN__c.field-meta.xml
<CustomField>
    <fullName>URN__c</fullName>
    <label>URN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>