force-app/main/default/objects/Account/fields/VAT_Code__c.field-meta.xml
<CustomField>
    <fullName>VAT_Code__c</fullName>
    <label>VAT Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>IRISH VAT</fullName>
            </value>
            <value>
                <fullName>Rate 23</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>