force-app/main/default/objects/Account/recordTypes/Candidate_Pool.recordType-meta.xml
<RecordType>
    <fullName>Candidate_Pool</fullName>
    <active>true</active>
    <label>Candidate Pool</label>
</RecordType>