force-app/main/default/objects/Account/recordTypes/Prospero_Client.recordType-meta.xml
<RecordType>
    <fullName>Prospero_Client</fullName>
    <active>true</active>
    <label>Prospero Client</label>
</RecordType>