force-app/main/default/objects/Account/recordTypes/Self_Bill.recordType-meta.xml
<RecordType>
    <fullName>Self_Bill</fullName>
    <active>true</active>
    <label>Self Bill</label>
</RecordType>