force-app/main/default/objects/Account/recordTypes/Umbrella.recordType-meta.xml
<RecordType>
    <fullName>Umbrella</fullName>
    <active>true</active>
    <label>Umbrella</label>
</RecordType>