force-app/main/default/objects/Account/validationRules/Block_Umbrella_create_edit_if_not_Financ.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Umbrella_create_edit_if_not_Financ</fullName>
    <active>true</active>
    <description>Prevents creating or editing Umbrella client accounts unless the user has Prospero Finance Permission, has Bypass System Automation, or is a System Administrator.</description>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;Umbrella&quot;,
  NOT($Permission.Prospero_Finance_Permission),
  NOT($Permission.Bypass_System_Automation),
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You cannot create or edit Umbrella companies, please contact the Finance team</errorMessage>
</ValidationRule>