force-app/main/default/objects/Account/validationRules/Council_Requires_Local_Authority.validationRule-meta.xml
<ValidationRule>
    <fullName>Council_Requires_Local_Authority</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $RecordType.DeveloperName = &quot;Prospero_Client&quot;,

    OR(
        ISPICKVAL(Health_Social_Care_Type__c, &quot;Council&quot;),
        ISPICKVAL(Teaching_Type__c, &quot;Council&quot;)
    ),

    ISBLANK(Local_Authority__c)
)</errorConditionFormula>
    <errorMessage>You must add the Local Authority that this Council is under</errorMessage>
</ValidationRule>