force-app/main/default/objects/Account/validationRules/test.validationRule-meta.xml
<ValidationRule>
    <fullName>test</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Team__c )</errorConditionFormula>
    <errorMessage>test</errorMessage>
</ValidationRule>