force-app/main/default/objects/Account/listViews/Prospero_Clients.listView-meta.xml
<ListView>
    <fullName>Prospero_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>includes</operation>
        <value>Health &amp; Social Care,Integrated,Teaching</value>
    </filters>
    <label>Prospero Clients</label>
</ListView>