force-app/main/default/objects/Account/listViews/TR1__AllAccounts.listView-meta.xml
<ListView>
    <fullName>TR1__AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Account.Candidate_Pool</value>
    </filters>
    <label>All Clients</label>
</ListView>